@@ -6,6 +6,7 @@ igraph_la_SOURCES       = igraphmodule.c error.c error.h convert.c convert.h \
                           edgeobject.c edgeobject.h \
 			  edgeseqobject.c edgeseqobject.h \
 			  graphobject.c graphobject.h \
+			  bfsiter.c bfsiter.h \
 			  common.c common.h
 igraph_la_CFLAGS        = $(PYTHON_INCLUDES) -I$(top_srcdir)/include
 igraph_la_LDFLAGS       = -module $(PYTHON_LDFLAGS) -L../../src
